--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "consolidate": "*",
     "cookie-parser": "~1.3.5",
+    "csv": "0.4.6",
+    "csv-parse": "1.0.1",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-react-views": "*",
+    "libxml": "*",
+    "libxml-xsd": "*",
+    "mongodb": "*",
+    "mongoose": "*",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "node-ffprobe":"1.2.2",
-    "mongodb":"*",
-    "mongoose":"*",
-    "csv": "0.4.6",
-    "csv-parse":"1.0.1",
-		"libxml":"*",
-		"libxml-xsd":"*",
-
-    "react":"*",
-    "react-dom":"*",
-    "express-react-views":"*",
-    "consolidate":"*"
+    "node-ffprobe": "1.2.2",
+    "react": "*",
+    "react-dom": "*",
+    "react-redux": "^4.4.0",
+    "serve-favicon": "~2.3.0"
   }
 }
